--- a/TikTok Videos Classification Project.ipynb
+++ b/TikTok Videos Classification Project.ipynb
@@ -3,34 +3,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "DtNBZFHO3M7n"
-   },
-   "source": [
-    "# **TikTok Project**\n",
-    "**Course 6 - The Nuts and bolts of machine learning**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "9ttxbfHXzB4e"
-   },
-   "source": [
-    "Recall that you are a data professional at TikTok. Your supervisor was impressed with the work you have done and has requested that you build a machine learning model that can be used to determine whether a video contains a claim or whether it offers an opinion. With a successful prediction model, TikTok can reduce the backlog of user reports and prioritize them more efficiently.\n",
-    "\n",
-    "A notebook was structured and prepared to help you in this project. A notebook was structured and prepared to help you in this project. Please complete the following questions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "rgSbVJvomcVa"
    },
    "source": [
-    "# **Course 6 End-of-course project: Classifying videos using machine learning**\n",
+    "# **TikTok Project: Classifying videos using machine learning**\n",
     "\n",
-    "In this activity, you will practice using machine learning techniques to predict on a binary outcome variable.\n",
-    "<br/>\n",
     "\n",
     "**The purpose** of this model is to increase response time and system efficiency by automating the initial stages of the claims process.\n",
     "\n",
@@ -65,52 +42,6 @@
    },
    "source": [
     "# **Classify videos using machine learning**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "NzDjfCSLf6Jq"
-   },
-   "source": [
-    "<img src=\"images/Pace.png\" width=\"100\" height=\"100\" align=left>\n",
-    "\n",
-    "# **PACE stages**\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "-svprBfKpAKf"
-   },
-   "source": [
-    "Throughout these project notebooks, you'll see references to the problem-solving framework PACE. The following notebook components are labeled with the respective PACE stage: Plan, Analyze, Construct, and Execute."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "E5g1A74r0ow_"
-   },
-   "source": [
-    "<img src=\"images/Plan.png\" width=\"100\" height=\"100\" align=left>\n",
-    "\n",
-    "\n",
-    "## **PACE: Plan**\n",
-    "\n",
-    "Consider the questions in your PACE Strategy Document to reflect on the Plan stage.\n",
-    "\n",
-    "In this stage, consider the following questions:\n",
-    "\n",
-    "\n",
-    "1.   **What are you being asked to do? What metric should I use to evaluate success of my business/organizational objective?**\n",
-    "\n",
-    "2.   **What are the ethical implications of the model? What are the consequences of your model making errors?**\n",
-    "  *   What is the likely effect of the model when it predicts a false negative (i.e., when the model says a video does not contain a claim and it actually does)?\n",
-    "\n",
-    "  *   What is the likely effect of the model when it predicts a false positive (i.e., when the model says a video does contain a claim and it actually does not)?\n",
-    "\n",
-    "3.   **How would you proceed?**\n"
    ]
   },
   {
@@ -195,21 +126,17 @@
    "outputs": [],
    "source": [
     "# Import packages for data manipulation\n",
-    "### YOUR CODE HERE ###\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
     "# Import packages for data visualization\n",
-    "### YOUR CODE HERE ###\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
     "# Import packages for data preprocessing\n",
-    "### YOUR CODE HERE ###\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "# Import packages for data modeling\n",
-    "### YOUR CODE HERE ###\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -433,7 +360,6 @@
    ],
    "source": [
     "# Display first few rows\n",
-    "### YOUR CODE HERE ###\n",
     "df.head()"
    ]
   },
@@ -466,7 +392,6 @@
    ],
    "source": [
     "# Get number of rows and columns\n",
-    "### YOUR CODE HERE ###\n",
     "df.shape"
    ]
   },
@@ -511,7 +436,6 @@
    ],
    "source": [
     "# Get data types of columns\n",
-    "### YOUR CODE HERE ###\n",
     "df.dtypes"
    ]
   },
@@ -559,7 +483,6 @@
    ],
    "source": [
     "# Get basic information\n",
-    "### YOUR CODE HERE ###\n",
     "df.info()"
    ]
   },
@@ -742,7 +665,6 @@
    ],
    "source": [
     "# Generate basic descriptive stats\n",
-    "### YOUR CODE HERE ###\n",
     "df.describe()"
    ]
   },
@@ -787,7 +709,6 @@
    ],
    "source": [
     "# Check for missing values\n",
-    "### YOUR CODE HERE ###\n",
     "df.isna().sum()"
    ]
   },
@@ -823,7 +744,6 @@
    ],
    "source": [
     "# Drop rows with missing values\n",
-    "### YOUR CODE HERE ###\n",
     "df = df.dropna(axis=0).reset_index(drop=True)\n",
     "df.isna().sum()"
    ]
@@ -1041,9 +961,7 @@
     }
    ],
    "source": [
-    "\n",
     "# Display first few rows after handling missing values\n",
-    "### YOUR CODE HERE ###\n",
     "df.head()"
    ]
   },
@@ -1076,7 +994,6 @@
    ],
    "source": [
     "# Check for duplicates\n",
-    "### YOUR CODE HERE ###\n",
     "df.duplicated().sum()"
    ]
   },
@@ -1128,20 +1045,7 @@
    ],
    "source": [
     "# Check class balance\n",
-    "### YOUR CODE HERE ###\n",
     "df['claim_status'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "kD8TsZ8jqri0"
-   },
-   "source": [
-    "<img src=\"images/Construct.png\" width=\"100\" height=\"100\" align=left>\n",
-    "\n",
-    "## **PACE: Construct**\n",
-    "Consider the questions in your PACE Strategy Document to reflect on the Construct stage."
    ]
   },
   {
@@ -1327,7 +1231,6 @@
    ],
    "source": [
     "# Extract the length of each `video_transcription_text` and add this as a column to the dataframe\n",
-    "### YOUR CODE HERE ###\n",
     "df['video_transcription_length'] = df['video_transcription_text'].str.len()\n",
     "df.head()"
    ]
@@ -1364,7 +1267,6 @@
    ],
    "source": [
     "# Calculate the average text_length for claims and opinions\n",
-    "### YOUR CODE HERE ###\n",
     "avg_text_length = df.groupby('claim_status')['video_transcription_length'].mean()\n",
     "avg_text_length"
    ]
@@ -1612,19 +1514,15 @@
    ],
    "source": [
     "# Create a copy of the X data\n",
-    "### YOUR CODE HERE ###\n",
     "X = df.copy()\n",
     "\n",
     "# Drop unnecessary columns\n",
-    "### YOUR CODE HERE ###\n",
     "X = df.drop(['#', 'video_id'], axis=1)\n",
     "\n",
     "# Encode target variable\n",
-    "### YOUR CODE HERE ###\n",
     "y = df['claim_status'].replace({'claim':1, 'opinion':0})\n",
     "\n",
     "# Dummy encode remaining categorical values\n",
-    "### YOUR CODE HERE ###\n",
     "X = pd.get_dummies(X, columns=['verified_status','author_ban_status'], drop_first=True)\n",
     "X.head()"
    ]
@@ -1668,16 +1566,6 @@
    "metadata": {},
    "source": [
     "Assign target variable."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Isolate target variable\n",
-    "### YOUR CODE HERE ###\n"
    ]
   },
   {
@@ -1845,11 +1733,9 @@
    ],
    "source": [
     "# Isolate features\n",
-    "### YOUR CODE HERE ###\n",
     "X = X.drop('claim_status', axis=1)\n",
     "\n",
     "# Display first few rows of features dataframe\n",
-    "### YOUR CODE HERE ###\n",
     "X.head()"
    ]
   },
@@ -1878,7 +1764,6 @@
    "outputs": [],
    "source": [
     "# Split the data into training and testing sets\n",
-    "### YOUR CODE HERE ###\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=0)"
    ]
   },
@@ -1900,7 +1785,6 @@
    "outputs": [],
    "source": [
     "# Split the training data into training and validation sets\n",
-    "### YOUR CODE HERE ###\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.25, stratify=y_train, random_state=0)"
    ]
   },
@@ -1932,7 +1816,6 @@
    ],
    "source": [
     "# Get shape of each training, validation, and testing set\n",
-    "### YOUR CODE HERE ###\n",
     "print(f'Training set: X: {X_train.shape}, y: {y_train.shape}')\n",
     "print(f'Validaion set: X: {X_val.shape}, y: {y_val.shape}')\n",
     "print(f'Test set: X: {y_test.shape}, y: {y_test.shape}')\n"
@@ -3186,11 +3069,9 @@
    "outputs": [],
    "source": [
     "# Instantiate the random forest classifier\n",
-    "### YOUR CODE HERE ###\n",
     "rf = RandomForestClassifier(random_state=0)\n",
     "\n",
     "# Create a dictionary of hyperparameters to tune\n",
-    "### YOUR CODE HERE ###\n",
     "cv_params = {'max_depth': [5, 7, None],\n",
     "             'max_features': [0.3, 0.6],\n",
     "            #  'max_features': 'auto'\n",
@@ -3201,11 +3082,9 @@
     "             }\n",
     "\n",
     "# Define a list of scoring metrics to capture\n",
-    "### YOUR CODE HERE ###\n",
     "scoring = ['accuracy','precision','recall','f1']\n",
     "\n",
     "# Instantiate the GridSearchCV object\n",
-    "### YOUR CODE HERE ###\n",
     "rf1 = GridSearchCV(\n",
     "    rf,\n",
     "    cv_params,\n",
@@ -3260,7 +3139,6 @@
    "source": [
     "%%time\n",
     "### Fit the model to the data \n",
-    "### YOUR CODE HERE ###\n",
     "rf1.fit(X_train_final, y_train)"
    ]
   },
@@ -3284,7 +3162,6 @@
    ],
    "source": [
     "# Examine best recall score\n",
-    "### YOUR CODE HERE ###\n",
     "rf1.best_score_"
    ]
   },
@@ -3313,7 +3190,6 @@
    ],
    "source": [
     "# Examine best parameters\n",
-    "### YOUR CODE HERE ###\n",
     "rf1.best_params_"
    ]
   },
@@ -3342,11 +3218,9 @@
    ],
    "source": [
     "# Access the GridSearch results and convert it to a pandas df\n",
-    "### YOUR CODE HERE ###\n",
     "rf_cv_results = pd.DataFrame(rf1.cv_results_)\n",
     "\n",
     "# Examine the GridSearch results df at column `mean_test_precision` in the best index\n",
-    "### YOUR CODE HERE ###\n",
     "rf_cv_results['mean_test_precision'][rf1.best_index_]"
    ]
   },
@@ -3384,11 +3258,9 @@
    "outputs": [],
    "source": [
     "# Instantiate the XGBoost classifier\n",
-    "### YOUR CODE HERE ###\n",
     "xgb = XGBClassifier(objective='binary:logistic', random_state=42)\n",
     "\n",
     "# Create a dictionary of hyperparameters to tune\n",
-    "### YOUR CODE HERE ###\n",
     "cv_params = {'max_depth': [4,8,12],\n",
     "             'min_child_weight': [3, 5],\n",
     "             'learning_rate': [0.01, 0.1],\n",
@@ -3399,7 +3271,6 @@
     "scoring = ['accuracy', 'precision', 'recall', 'f1']\n",
     "\n",
     "# Instantiate the GridSearchCV object\n",
-    "### YOUR CODE HERE ###\n",
     "xgb1 = GridSearchCV(xgb, cv_params, scoring=scoring, cv=5, refit='recall')"
    ]
   },
@@ -3504,7 +3375,6 @@
    ],
    "source": [
     "# Fit the model to the data\n",
-    "### YOUR CODE HERE ###\n",
     "xgb1.fit(X_train_final, y_train)"
    ]
   },
@@ -3526,7 +3396,6 @@
    ],
    "source": [
     "# Examine best recall score\n",
-    "### YOUR CODE HERE ###\n",
     "xgb1.best_score_"
    ]
   },
@@ -3551,7 +3420,6 @@
    ],
    "source": [
     "# Examine best parameters\n",
-    "### YOUR CODE HERE ###\n",
     "xgb1.best_params_"
    ]
   },
@@ -3582,33 +3450,10 @@
    ],
    "source": [
     "# Access the GridSearch results and convert it to a pandas df\n",
-    "### YOUR CODE HERE ###\n",
     "xgb_results_df = pd.DataFrame(xgb1.cv_results_)\n",
     "\n",
     "# Examine the GridSearch results df at column `mean_test_precision` in the best index\n",
-    "### YOUR CODE HERE ###\n",
     "xgb_results_df['mean_test_precision'][xgb1.best_index_]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "XHM9FTmHwHi9"
-   },
-   "source": [
-    "**Question:** How well does your model perform? Consider recall score and precision score."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "_HGsWfEOeWPm"
-   },
-   "source": [
-    "<img src=\"images/Execute.png\" width=\"100\" height=\"100\" align=left>\n",
-    "\n",
-    "## **PACE: Execute**\n",
-    "Consider the questions in your PACE Strategy Document to reflect on the Execute stage."
    ]
   },
   {
@@ -3640,7 +3485,6 @@
    "outputs": [],
    "source": [
     "# Use the random forest \"best estimator\" model to get predictions on the validation set\n",
-    "### YOUR CODE HERE ###\n",
     "y_val_preds = rf1.best_estimator_.predict(X_val_final)"
    ]
   },
@@ -3673,7 +3517,6 @@
    ],
    "source": [
     "# Display the predictions on the validation set\n",
-    "### YOUR CODE HERE ###\n",
     "y_val_preds"
    ]
   },
@@ -3717,7 +3560,6 @@
    ],
    "source": [
     "# Display the true labels of the validation set\n",
-    "### YOUR CODE HERE ###\n",
     "y_val"
    ]
   },
@@ -3763,18 +3605,11 @@
     "cm = confusion_matrix(y_val, y_val_preds)\n",
     "\n",
     "# Compute values for confusion matrix\n",
-    "### YOUR CODE HERE ###\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm, display_labels=None)\n",
     "\n",
-    "# Create display of confusion matrix using ConfusionMatrixDisplay()\n",
-    "### YOUR CODE HERE ###\n",
     "\n",
     "# Plot confusion matrix\n",
-    "### YOUR CODE HERE ###\n",
-    "disp.plot()\n",
-    "\n",
-    "# Display plot\n",
-    "### YOUR CODE HERE ###\n"
+    "disp.plot()\n"
    ]
   },
   {
@@ -3834,7 +3669,6 @@
    "source": [
     "# Create a classification report\n",
     "# Create classification report for random forest model\n",
-    "### YOUR CODE HERE ###\n",
     "target_labels = ['opinion','claim']\n",
     "print(classification_report(y_val, y_val_preds, target_names=target_labels))"
    ]
@@ -3875,7 +3709,6 @@
    "outputs": [],
    "source": [
     "# Use the best estimator to predict on the validation data\n",
-    "### YOUR CODE HERE ###\n",
     "xgb_preds = xgb1.best_estimator_.predict(X_val_final)"
    ]
   },
@@ -3909,18 +3742,12 @@
    ],
    "source": [
     "# Compute values for confusion matrix\n",
-    "### YOUR CODE HERE ###\n",
     "cm = confusion_matrix(y_val, xgb_preds)\n",
     "\n",
     "# Create display of confusion matrix using ConfusionMatrixDisplay()\n",
-    "### YOUR CODE HERE ###\n",
     "disp = ConfusionMatrixDisplay(cm, display_labels=None)\n",
     "\n",
-    "# Plot confusion matrix\n",
-    "### YOUR CODE HERE ###\n",
-    "\n",
     "# Display plot\n",
-    "### YOUR CODE HERE ###\n",
     "disp.plot()"
    ]
   },
@@ -3949,7 +3776,6 @@
    ],
    "source": [
     "# Create a classification report\n",
-    "### YOUR CODE HERE ###\n",
     "target_labels = ['opinion','claim']\n",
     "print(classification_report(y_val, xgb_preds, target_names=target_labels))"
    ]
@@ -4016,18 +3842,12 @@
    ],
    "source": [
     "# Compute values for confusion matrix\n",
-    "### YOUR CODE HERE ###\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "\n",
     "# Create display of confusion matrix using ConfusionMatrixDisplay()\n",
-    "### YOUR CODE HERE ###\n",
     "disp = ConfusionMatrixDisplay(cm, display_labels=None)\n",
     "\n",
-    "# Plot confusion matrix\n",
-    "### YOUR CODE HERE ###\n",
-    "\n",
     "# Display plot\n",
-    "### YOUR CODE HERE ###\n",
     "disp.plot()"
    ]
   },
@@ -4086,19 +3906,7 @@
     "id": "ill21hQ4ej9-"
    },
    "source": [
-    "### **Task 8. Conclusion**\n",
-    "\n",
-    "In this step use the results of the models above to formulate a conclusion. Consider the following questions:\n",
-    "\n",
-    "1. **Would you recommend using this model? Why or why not?**\n",
-    "\n",
-    "2. **What was your model doing? Can you explain how it was making predictions?**\n",
-    "\n",
-    "3. **Are there new features that you can engineer that might improve model performance?**\n",
-    "\n",
-    "4. **What features would you want to have that would likely improve the performance of your model?**\n",
-    "\n",
-    "Remember, sometimes your data simply will not be predictive of your chosen target. This is common. Machine learning is a powerful tool, but it is not magic. If your data does not contain predictive signal, even the most complex algorithm will not be able to deliver consistent and accurate predictions. Do not be afraid to draw this conclusion.\n"
+    "### ** Conclusion**"
    ]
   },
   {
@@ -4107,8 +3915,6 @@
     "id": "BfD0kv7qE3lw"
    },
    "source": [
-    "**Exemplar response:**\n",
-    "\n",
     "1. *Would you recommend using this model? Why or why not?*\n",
     "Yes, one can recommend this model because it performed well on both the validation and test holdout data. Furthermore, both precision and F<sub>1</sub> scores were consistently high. The model very successfully classified claims and opinions.\n",
     "</br>\n",
@@ -4120,13 +3926,6 @@
     "</br>\n",
     "4. *What features would you want to have that would likely improve the performance of your model?*\n",
     "The current version of the model does not need any new features. However, it would be helpful to have the number of times the video was reported. It would also be useful to have the total number of user reports for all videos posted by each author."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Congratulations!** You've completed this lab. However, you may not notice a green check mark next to this item on Coursera's platform. Please continue your progress regardless of the check mark. Just click on the \"save\" icon at the top of this notebook to ensure your work has been logged."
    ]
   }
  ],
