--- a/TikTok Videos Classification Project.ipynb
+++ b/TikTok Videos Classification Project.ipynb
@@ -101,9 +101,7 @@
     "1. Split the data into train/validation/test sets (60/20/20)\n",
     "2. Fit models and tune hyperparameters on the training set\n",
     "3. Perform final model selection on the validation set\n",
-    "4. Assess the champion model's performance on the test set\n",
-    "\n",
-    "![](https://raw.githubusercontent.com/adacert/tiktok/main/optimal_model_flow_numbered.svg)\n"
+    "4. Assess the champion model's performance on the test set\n"
    ]
   },
   {
@@ -168,19 +166,6 @@
    "source": [
     "# Load dataset into dataframe\n",
     "df = pd.read_csv(\"tiktok_dataset.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "EgPRBjizg1oo"
-   },
-   "source": [
-    "<img src=\"images/Analyze.png\" width=\"100\" height=\"100\" align=left>\n",
-    "\n",
-    "## **PACE: Analyze**\n",
-    "\n",
-    "Consider the questions in your PACE Strategy Document to reflect on the Analyze stage."
    ]
   },
   {
